Create links to .opr file examples in 413.md, issue #7

--- a/mkdocs-project/docs/Input Description/413.md
+++ b/mkdocs-project/docs/Input Description/413.md
@@ -108,53 +108,53 @@ Figure 4 - Special Operating Rule Types (<a href="../413_4.PNG">see also the ful
 
 | Item			| Destination Diverting Structure				| Source or Replacement Structure		| Operational Activity |
 | ---------     | ----------------------------                  | -----------------------------         | 						| 
-| 4.13.1		| Instream Flow									| Reservoir								| Reservoir to instream flow. Delivery by the river.
-| 4.13.2		| Direct Flow or Reservoir						| Reservoir								| Reservoir to a direct flow or reservoir or carrier. Delivery by the river or carrier. 
-| 4.13.3		| Direct Flow or	Reservoir					| Reservoir								| Reservoir to a carrier. Delivery by a carrier.
-| 4.13.4		| Direct Flow	Reservoir						| Reservoir 							| Exchange to a Direct Flow. Delivery by the river.
-| 4.13.5		| Reservoir										| Reservoir								| Reservoir Exchange to Storage. Delivery by the river.
-| 4.13.6		| Reservoir										| Reservoir								| Bookover transfer between reservoir accounts.
-| 4.13.7		| Diversion or Reservoir 						| Reservoir								| Reservoir to a Carrier by Exchange. Delivery by the river.
-| 4.13.8		| Reservoir or Plan								| Reservoir or Plan						| Out-of-Priority Bookover. Bookover of an Out-of-Priority diversion.
-| 4.13.9		| NA											| Reservoir								| Release for target contents. Delivery by the river.
-| 4.13.10		| Direct Flow									| Reservoir								| General Reservoir Replacement. By direct release or exchange. Delivery by the river.
-| 4.13.11		| Direct Flow or Reservoir						| Water Right							| Carrier Right to a ditch or reservoir. Delivery by a carrier.
-| 4.13.12		| NA											| NA									| Reoperation Reoperate water rights
-| 4.13.13		| Instream Flow									| Stream Gage							| Index flow constraint on an instream flow diversion. Note: La Plata Compact uses this Operating Rule.
-| 4.13.14		| Direct Flow or Reservoir						| Direct Flow							| Carrier Right with constrained demand. Carrier constrained by the demand at both the destination and source. Delivery by the river.
-| 4.13.15		| Instream Flow									| Water Right							| Interruptible supply based on a natural flow estimate. Transfer a direct diversion water right to an instream flow. 
-| 4.13.16		| Direct Flow									| Water Right							| Direct Flow Storage. Allow the unused portion of a direct flow decree to be stored in a reservoir.
-| 4.13.17		| Direct Flow									| Index Station 						| Rio Grande Compact - Rio Grande portion.
-| 4.13.18		| Direct Flow									| Index Station							| Rio Grande Compact – Conejos River portion.		
-| 4.13.19		| Direct Flow									| River									| Split Channel Operations
-| 4.13.20		| NA											| Reservoir								| San Juan Reservoir RIP Operation
-| 4.13.21		| Well											| NA									| Wells with Sprinkler Use	
-| 4.13.22		| Direct Flow									| NA									| Soil Moisture Use and Well
-| 4.13.23		| Downstream Call								| River									| Downstream Call. Operate a downstream call.
-| 4.13.24		| Direct Flow or Reservoir or Plan				| Water Right							| Direct Flow Exchange. Supply a direct flow or reservoir or plan by exchange of a water right from river or carrier
-| 4.13.25		| Direct Flow or Reservoir or Plan				| Water Right							| Direct Flow Bypass. Supply a direct flow or reservoir or plan by a bypass of a water right from river or carrier
-| 4.13.26		| Changed Water Right Plan  					| Water Right							| Transfer a direct flow water water right to an administrative plan     
-| 4.13.27		| Diversion or Reservoir						| Reservoir or Reuse Plan 				| Reservoir or Reuse Plan to a Diversion or Reservoir Direct with or without destination reuse Supply a diversion or Reservoir from a Reservoir or Reuse Plan directly from the river or a carrier
-| 4.13.28		| Diversion or Reservoir						| Reservoir or Reuse Plan 				| Reservoir or Reuse Plan to a Diversion or Reservoir by exchange with or without destination reuse. Supply a diversion or reservoir from a reservoir or plan by exchange by Exchange from the river or a carrier
-| 4.13.29		| NA											| Plan									| Plan Spill. Release water from a plan delivery by the river. Source water location is destination when Changed Water Rights Plan is source
-| 4.13.30		| Reservoir										| Operating Rule 						| Reservoir rediversion. Redivert water released by another operating rule for a T&C plan
-| 4.13.31		| Direct Flow or Reservoir						| Water Right							| Carrier Right with Reuse 
-| 4.13.32		| Direct Flow or Reservoir or Carrier			| Reservoir & Reservoir Reuse Plan		| Plan Reservoir and Plan to a direct flow or reservoir or carrier direct with or without destination reuse. Delivery by the river or carrier
-| 4.13.33		| Direct Flow or Reservoir or Carrier			| Reservoir & Reservoir Reuse Plan		| Plan to a Direct Flow or reservoir or carrier by exchange with or without destination reuse. Delivery by the river or carrier
-| 4.13.34		| Reservoir										| Reservoir (bookover)					| Bookover with Reuse with Reuse 
-| 4.13.35		| Import Diversion								| Acct.Plan								| Import to an Accounting Plan. Delivery by the river
-| 4.13.36		| Direct Flow									| Water Right							| Seasonal (daily) Water Right (e.g. Meadow Rights)
-| 4.13.37		| Plan											| Well Water Right						| Augmentation Well. Pump an augmentation well to satisfy a T&C or Well Augmentation plan requirement.
-| 4.13.38		| Direct Flow or Reservoir or Carrier			| Water Right							| Out-of-Priority Diversion. Divert out-of-priority to a reservoir or a diversion with respect to a senior reservoir right. Addresses the upstream storage statute.
-| 4.13.39		| Well or Diversion								| Water Right							| Alternate Point. Pump or divert using an alternate point of diversion
-| 4.13.40		| Diversion or Instream Flow 					| River       							| South Platte Compact Release. Works in conjunction with a type 50 operating rule to 1) release water to a user that is water short and located upstream of the Washington county line (e.g not in Water District 64) or 2) to the South Platte compact itself.
-| 4.13.41		| Reservoir										| Water Right							| Storage with Special Limits. Limit reservoir storage by the amount diverted by one or more Out-of-Priority Plans
-| 4.13.42		| NA											| Plan									| Plan Reset
-| 4.13.43		| Well Augmentation Plan						| River									| In-Priority Supply. Determine if well depletions from pumping in a prior time step or terms and conditions accounted for in a Plan structure are in priority
-| 4.13.44		| Recharge Reservoir							| Well Water Right						| Recharge Well. Pump a recharge well to a Recharge Reservoir
-| 4.13.45		| Direct Flow or Reservoir						| Water Right							| Carrier right with loss to a ditch or reservoir. Delivery by a carrier.
-| 4.13.46		| Admin Plan									| Admin Plan							| Multiple Ownership
-| 4.13.47		| NA											| Rel. Limit Plan 						| Monthly/Annual Plan Limits 
-| 4.13.48 		| Direct Flow or Reservoir or Carrier			| Reservoir or Plan						| Reservoir or Plan to Plan Direct
-| 4.13.49		| Plan or	Reservoir Reuse						| Plan									| Reservoir or Plan to Plan Exchange
-| 4.13.50		| Plan          	 							| River       							| South Platte Compact Storage. Works in conjunction with a type 40 operating rule to allow water to be diverted in priority to a plan that represents the South Platte compact.
+| [4.13.1](../Input Description/4131.md)		| Instream Flow									| Reservoir								| Reservoir to instream flow. Delivery by the river.
+| [4.13.2](../Input Description/4132.md)		| Direct Flow or Reservoir						| Reservoir								| Reservoir to a direct flow or reservoir or carrier. Delivery by the river or carrier. 
+| [4.13.3](../Input Description/4133.md)		| Direct Flow or	Reservoir					| Reservoir								| Reservoir to a carrier. Delivery by a carrier.
+| [4.13.4](../Input Description/4134.md)		| Direct Flow	Reservoir						| Reservoir 							| Exchange to a Direct Flow. Delivery by the river.
+| [4.13.5](../Input Description/4135.md)		| Reservoir										| Reservoir								| Reservoir Exchange to Storage. Delivery by the river.
+| [4.13.6](../Input Description/4136.md)		| Reservoir										| Reservoir								| Bookover transfer between reservoir accounts.
+| [4.13.7](../Input Description/4137.md)		| Diversion or Reservoir 						| Reservoir								| Reservoir to a Carrier by Exchange. Delivery by the river.
+| [4.13.8](../Input Description/4138.md)		| Reservoir or Plan								| Reservoir or Plan						| Out-of-Priority Bookover. Bookover of an Out-of-Priority diversion.
+| [4.13.9](../Input Description/4139.md)		| NA											| Reservoir								| Release for target contents. Delivery by the river.
+| [4.13.10](../Input Description/41310.md)		| Direct Flow									| Reservoir								| General Reservoir Replacement. By direct release or exchange. Delivery by the river.
+| [4.13.11](../Input Description/41311.md)		| Direct Flow or Reservoir						| Water Right							| Carrier Right to a ditch or reservoir. Delivery by a carrier.
+| [4.13.12](../Input Description/41312.md)		| NA											| NA									| Reoperation Reoperate water rights
+| [4.13.13](../Input Description/41313.md)		| Instream Flow									| Stream Gage							| Index flow constraint on an instream flow diversion. Note: La Plata Compact uses this Operating Rule.
+| [4.13.14](../Input Description/41314.md)		| Direct Flow or Reservoir						| Direct Flow							| Carrier Right with constrained demand. Carrier constrained by the demand at both the destination and source. Delivery by the river.
+| [4.13.15](../Input Description/41315.md)		| Instream Flow									| Water Right							| Interruptible supply based on a natural flow estimate. Transfer a direct diversion water right to an instream flow. 
+| [4.13.16](../Input Description/41316.md)		| Direct Flow									| Water Right							| Direct Flow Storage. Allow the unused portion of a direct flow decree to be stored in a reservoir.
+| [4.13.17](../Input Description/41317.md)		| Direct Flow									| Index Station 						| Rio Grande Compact - Rio Grande portion.
+| [4.13.18](../Input Description/41318.md)		| Direct Flow									| Index Station							| Rio Grande Compact – Conejos River portion.		
+| [4.13.19](../Input Description/41319.md)		| Direct Flow									| River									| Split Channel Operations
+| [4.13.20](../Input Description/41320.md)		| NA											| Reservoir								| San Juan Reservoir RIP Operation
+| [4.13.21](../Input Description/41321.md)		| Well											| NA									| Wells with Sprinkler Use	
+| [4.13.22](../Input Description/41322.md)		| Direct Flow									| NA									| Soil Moisture Use and Well
+| [4.13.23](../Input Description/41323.md)		| Downstream Call								| River									| Downstream Call. Operate a downstream call.
+| [4.13.24](../Input Description/41324.md)		| Direct Flow or Reservoir or Plan				| Water Right							| Direct Flow Exchange. Supply a direct flow or reservoir or plan by exchange of a water right from river or carrier
+| [4.13.25](../Input Description/41325.md)		| Direct Flow or Reservoir or Plan				| Water Right							| Direct Flow Bypass. Supply a direct flow or reservoir or plan by a bypass of a water right from river or carrier
+| [4.13.26](../Input Description/41326.md)		| Changed Water Right Plan  					| Water Right							| Transfer a direct flow water water right to an administrative plan     
+| [4.13.27](../Input Description/41327.md)		| Diversion or Reservoir						| Reservoir or Reuse Plan 				| Reservoir or Reuse Plan to a Diversion or Reservoir Direct with or without destination reuse Supply a diversion or Reservoir from a Reservoir or Reuse Plan directly from the river or a carrier
+| [4.13.28](../Input Description/41328.md)		| Diversion or Reservoir						| Reservoir or Reuse Plan 				| Reservoir or Reuse Plan to a Diversion or Reservoir by exchange with or without destination reuse. Supply a diversion or reservoir from a reservoir or plan by exchange by Exchange from the river or a carrier
+| [4.13.29](../Input Description/41329.md)		| NA											| Plan									| Plan Spill. Release water from a plan delivery by the river. Source water location is destination when Changed Water Rights Plan is source
+| [4.13.30](../Input Description/41330.md)		| Reservoir										| Operating Rule 						| Reservoir rediversion. Redivert water released by another operating rule for a T&C plan
+| [4.13.31](../Input Description/41331.md)		| Direct Flow or Reservoir						| Water Right							| Carrier Right with Reuse 
+| [4.13.32](../Input Description/41332.md)		| Direct Flow or Reservoir or Carrier			| Reservoir & Reservoir Reuse Plan		| Plan Reservoir and Plan to a direct flow or reservoir or carrier direct with or without destination reuse. Delivery by the river or carrier
+| [4.13.33](../Input Description/41333.md)		| Direct Flow or Reservoir or Carrier			| Reservoir & Reservoir Reuse Plan		| Plan to a Direct Flow or reservoir or carrier by exchange with or without destination reuse. Delivery by the river or carrier
+| [4.13.34](../Input Description/41334.md)		| Reservoir										| Reservoir (bookover)					| Bookover with Reuse with Reuse 
+| [4.13.35](../Input Description/41335.md)		| Import Diversion								| Acct.Plan								| Import to an Accounting Plan. Delivery by the river
+| [4.13.36](../Input Description/41336.md)		| Direct Flow									| Water Right							| Seasonal (daily) Water Right (e.g. Meadow Rights)
+| [4.13.37](../Input Description/41337.md)		| Plan											| Well Water Right						| Augmentation Well. Pump an augmentation well to satisfy a T&C or Well Augmentation plan requirement.
+| [4.13.38](../Input Description/41338.md)		| Direct Flow or Reservoir or Carrier			| Water Right							| Out-of-Priority Diversion. Divert out-of-priority to a reservoir or a diversion with respect to a senior reservoir right. Addresses the upstream storage statute.
+| [4.13.39](../Input Description/41339.md)		| Well or Diversion								| Water Right							| Alternate Point. Pump or divert using an alternate point of diversion
+| [4.13.40](../Input Description/41340.md)		| Diversion or Instream Flow 					| River       							| South Platte Compact Release. Works in conjunction with a type 50 operating rule to 1) release water to a user that is water short and located upstream of the Washington county line (e.g not in Water District 64) or 2) to the South Platte compact itself.
+| [4.13.41](../Input Description/41341.md)		| Reservoir										| Water Right							| Storage with Special Limits. Limit reservoir storage by the amount diverted by one or more Out-of-Priority Plans
+| [4.13.42](../Input Description/41342.md)		| NA											| Plan									| Plan Reset
+| [4.13.43](../Input Description/41343.md)		| Well Augmentation Plan						| River									| In-Priority Supply. Determine if well depletions from pumping in a prior time step or terms and conditions accounted for in a Plan structure are in priority
+| [4.13.44](../Input Description/41344.md)		| Recharge Reservoir							| Well Water Right						| Recharge Well. Pump a recharge well to a Recharge Reservoir
+| [4.13.45](../Input Description/41345.md)		| Direct Flow or Reservoir						| Water Right							| Carrier right with loss to a ditch or reservoir. Delivery by a carrier.
+| [4.13.46](../Input Description/41346.md)		| Admin Plan									| Admin Plan							| Multiple Ownership
+| [4.13.47](../Input Description/41347.md)		| NA											| Rel. Limit Plan 						| Monthly/Annual Plan Limits 
+| [4.13.48](../Input Description/41348.md) 		| Direct Flow or Reservoir or Carrier			| Reservoir or Plan						| Reservoir or Plan to Plan Direct
+| [4.13.49](../Input Description/41349.md)		| Plan or	Reservoir Reuse						| Plan									| Reservoir or Plan to Plan Exchange
+| [4.13.50](../Input Description/41350.md)		| Plan          	 							| River       							| South Platte Compact Storage. Works in conjunction with a type 40 operating rule to allow water to be diverted in priority to a plan that represents the South Platte compact.
