Made edits to Model Operation section, 6.md, for clarity. Issue #8.

--- a/mkdocs-project/docs/Model Operation/6.md
+++ b/mkdocs-project/docs/Model Operation/6.md
@@ -9,13 +9,17 @@ The State Model is structured to perform one of four (4) interrelated activities
 
 For a description of each option, see [Section 3.3](../Model Description/33.md) of this documentation. The model can be executed using 
 either the StateMod Graphical User Interface available from the CDSS website or via a command line argument. 
-If a command line argument is used, enter the model name and option as follows:
+If a command line argument is used, navigate the command prompt to the location of the StateMod Model, and enter the model name, file name, and options as follows.
+Note that a StateMod executable needs to be in the same directory as the StateMod model files:
 
 `statemod [file] [options]`
 
 where:
  
-`file` = base file name of the simulation 
+`statemod` = base name of StateMod executable, such as `statemod` or `StateMod_Model_15`.
+`file` = base file name of the simulation, such as `cm2015`.
+
+Note the order of the `[file]` and `[options]` matters.
 
 | Option<sup>1</sup> | Description |
 | -------------------------- 	 | --------------------	|
@@ -38,22 +42,22 @@ as the output file requested. Following are examples of the report option with s
 
 | Argument<sup>1</sup>       	| Result           	|                           
 | ------------------------		| --------------	|                                                                                
-| -report -xnm               	| Detailed node accounting for all years and Detailed node accounting average               
-| -report -xwb               	| Water Balance                                  
-| -report -xwr               	| Water Right List sorted by basin rank          
-| -report -xdg [-station id] 	| Direct Diversion, Instream Diversion and Gage graph file                                
-| -report -xrg [-station id] 	| Reservoir graph file 
-| -report -xwg [-station id] 	| Well graph file                                                              
-| -report -xdc               	| Diversion comparison file
-| -report -xrc               	| Reservoir comparison file   
-| -report -xwc               	| Well comparison file
-| -report -xsc               	| Stream flow gage comparison file       		
-| -report -xcu               	| Diversions by ditch formatted for the CU model
-| -report -xst               	| Standard diversion (\*.xdd) and reservoir (\*.xre) output
-| -report -xsp               	| Special parameter report<sup>2</sup>.
-
+| `-report` `-xnm`               	| Detailed node accounting for all years and Detailed node accounting average               
+| `-report` `-xwb`               	| Water Balance                                  
+| `-report` `-xwr`               	| Water Right List sorted by basin rank          
+| `-report` `-xdg` `[-station id]` 	| Direct Diversion, Instream Diversion and Gage graph file                                
+| `-report` `-xrg` `[-station id]` 	| Reservoir graph file 
+| `-report` `-xwg` `[-station id]` 	| Well graph file                                                              
+| `-report` `-xdc`               	| Diversion comparison file
+| `-report` `-xrc`               	| Reservoir comparison file   
+| `-report` `-xwc`               	| Well comparison file
+| `-report` `-xsc`               	| Stream flow gage comparison file       		
+| `-report` `-xcu`               	| Diversions by ditch formatted for the CU model
+| `-report` `-xst`               	| Standard diversion (\*.xdd) and reservoir (\*.xre) output
+| `-report` `-xsp`               	| Special parameter report<sup>2</sup>.
+				 
 <sup>1</sup> If omitted, the PC version of the model defaults to request the desired option from the screen, 
 while the Unix version prints an error message.
 
 <sup>2</sup> For the special parameter report the output type (e.g. diversion, reservoir, well, stream gage or All) 
-and parameter (e.g. River Outflow) must be specified in the output request file. 
+and parameter (e.g. River_Outflow) must be specified in the output request file. 
